--- a/web/css/public.css
+++ b/web/css/public.css
@@ -1,3 +1,46 @@
+.nav {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px dashed gray;
+}
+.nav > ul,.nav > ul > li{float: right;height: 100%;}
+
+.nav > ul > li,.nav > .title,.nav .nav-li > ul,.nav .nav-li > ul > li {
+    padding: 0 18px;
+    height: 100%;
+    line-height: 50px;
+}
+
+.nav > ul > li {border-left: 1px dashed gray;}
+
+.nav > .title{
+    float: left;
+}
+
+.nav .nav-li {
+    position: relative;
+}
+.nav .nav-li > ul {
+    position: absolute;
+    display: none;
+    right: -18px;
+    bottom: -100%;
+    width: auto;
+}
+
+.nav .nav-li > ul > li {
+    white-space: nowrap;
+    border-right: 1px dashed gray;
+    border-bottom: 1px dashed gray;
+    border-left: 1px dashed gray;
+    cursor: pointer;
+}
+
+.nav .nav-li > ul > li:hover > a {
+    color: lightseagreen;
+}
+
 .form-beautify tr>td:first-child {
     text-align: right;
 }
