--- a/web/css/goods.css
+++ b/web/css/goods.css
@@ -9,7 +9,7 @@
     height: 200px;
 }
 
-.goods-info > .goods-img {
+.goods-info > a > .goods-img {
     overflow: hidden;
     wdith: 100%;
     height: 130px;
@@ -21,3 +21,8 @@
     width: 100%;
     height: 70px;
 }
+
+.goods-info:hover {
+    box-shadow: 0px 0px 10px lightseagreen;
+}
+
