--- a/web/css/public.css
+++ b/web/css/public.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 50px;
     border-bottom: 1px dashed gray;
+    z-index: 10000;
 }
 .nav > ul,.nav > ul > li{float: right;height: 100%;}
 
@@ -27,14 +28,14 @@
     right: -18px;
     bottom: -100%;
     width: auto;
+    z-index: 1000;
 }
 
 .nav .nav-li > ul > li {
     white-space: nowrap;
-    border-right: 1px dashed gray;
-    border-bottom: 1px dashed gray;
-    border-left: 1px dashed gray;
+    border: 1px dashed gray;
     cursor: pointer;
+    background: #fff;
 }
 
 .nav .nav-li > ul > li:hover > a {
